--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 
   <script src="./requestInterval.js"></script>
   <script src="./gif.js"></script>
-  <script src="https://jakeh9777.github.io/test/main.js"></script>
+  <script src="https://benisland.neocities.org/petpet/main.js"></script>
 </body>
 
 </html>
